[package]
name = "tg_download_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0.64"
toml = "0.9.10"
config = "0.15.11"
serde = { version = "1.0.144", features = ["derive"] }
log = "0.4.17"
secrecy = { version = "0.10.3", features = ["serde"] }
env_logger = "0.11.8"
reqwest = "0.12.19"
